@@ -310,6 +310,7 @@ Version 1.11.0-svn:
    * Added: UNREACHABLE_CODE macro.
    * Added: TELEPORT animation macros usable by any units
    * Added: CMake option ENABLE_SHARED_LIBRARIES.
+   * Fixed: Allow strict compilation with CMake using the upcoming gcc-4.8.
 
 Version 1.10.0:
  * Campaigns:
